Shifting hero wrapper down since the banner is no longer there.

--- a/css/brackets.io.css
+++ b/css/brackets.io.css
@@ -253,7 +253,7 @@ blockquote p {
     background: linear-gradient(135deg,  #2fa7fc 0%,#2fa7fc 50%,#288edf 50%,#288edf 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2fa7fc', endColorstr='#288edf',GradientType=1 ); /* IE6-8 fallback on horizontal gradient */
 
-/*    margin: 62px 0 0;*/
+    margin: 62px 0 0;
 }
 
 #hero {
